--- a/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
@@ -212,6 +212,8 @@
     <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\MainExtensions\GenericBusinessEntity\vr-genericdata-genericbusinessentity-vieweditor.js" />
     <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\MainExtensions\VRRestAPIBusinessEntityDefinition\Templates\VRRestAPIBEDefinitionsEditorTemplate.html" />
     <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\MainExtensions\VRRestAPIBusinessEntityDefinition\vr-genericdata-restapibedefinitions-editor.js" />
+    <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\Templates\OverriddenBEDefinition.html" />
+    <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\vr-genericdata-overriddenconfiguration-bedefinition.js" />
     <Content Include="VR_GenericData\Directives\BusinessEntity\Templates\BusinessEntitySelectorTemplate.html" />
     <Content Include="VR_GenericData\Directives\BusinessEntity\vr-genericdata-businessentity-remoteselector.js" />
     <Content Include="VR_GenericData\Directives\BusinessEntity\vr-genericdata-businessentity-selector.js" />
@@ -262,6 +264,8 @@
     <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\MainExtensions\GenericBusinessEntity\Runtime\Editor\vr-genericdata-genericbusinessentity-runtime-row.js" />
     <Content Include="VR_GenericData\Directives\BusinessEntityDefinition\MainExtensions\GenericBusinessEntity\Runtime\Editor\vr-genericdata-genericbusinessentity-runtime-section.js" />
     <Content Include="VR_GenericData\Directives\GenericRuleDefinition\Templates\GenericRuleDefinitionSettings.html" />
+    <Content Include="VR_GenericData\Directives\GenericRuleDefinition\Templates\OverriddenGenericRuleDefinition.html" />
+    <Content Include="VR_GenericData\Directives\GenericRuleDefinition\vr-genericdata-overriddenconfiguration-genericruledefinition.js" />
     <Content Include="VR_GenericData\Directives\GenericRuleDefinition\vr-genericdata-genericruledefinition-settings.js" />
     <Content Include="VR_GenericData\Directives\GenericRule\Templates\GenericRuleCriteriaTemplate.html" />
     <Content Include="VR_GenericData\Directives\GenericRule\vr-genericdata-genericrule-criteria.js" />
