renaming salepricelist to salePriceListManagement
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41167

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -502,10 +502,10 @@
     <Content Include="WhS_BusinessEntity\Views\SalePriceListTemplate\SalePriceListTemplateEditorController.js" />
     <Content Include="WhS_BusinessEntity\Views\SalePriceListTemplate\SalePriceListTemplateManagement.html" />
     <Content Include="WhS_BusinessEntity\Views\SalePriceListTemplate\SalePriceListTemplateManagementController.js" />
-    <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePricelist.html" />
+    <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePricelistManagement.html" />
     <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePriceListChange.html" />
     <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePriceListChangeController.js" />
-    <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePricelistController.js" />
+    <Content Include="WhS_BusinessEntity\Views\SalePricelist\SalePricelistManagementController.js" />
     <Content Include="WhS_BusinessEntity\Views\SaleService\SaleServiceManagement.html" />
     <Content Include="WhS_BusinessEntity\Views\SaleService\SaleServiceManagementController.js" />
     <Content Include="WhS_BusinessEntity\Views\SaleRate\SaleRateManagement.html" />
