Impelementing invoiceTile and liveBalance tile
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41173

--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
@@ -67,6 +67,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountStatementManager.cs" />
+    <Compile Include="LiveBalanceManager.cs" />
+    <Compile Include="LiveBalanceTileDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetailAccountUserManager.cs" />
   </ItemGroup>
