--- a/CarrierPortal/Code/PartnerPortal.Invoice.Business/PartnerPortal.Invoice.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Business/PartnerPortal.Invoice.Business.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InvoiceManager.cs" />
+    <Compile Include="InvoiceTileDefinitionSettings.cs" />
     <Compile Include="InvoiceTypeManager.cs" />
     <Compile Include="InvoiceViewerTypeInfoFilterContext.cs" />
     <Compile Include="InvoiceViewerTypeManager.cs" />
@@ -70,6 +71,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PartnerPortal.CustomerAccess.Business\PartnerPortal.CustomerAccess.Business.csproj">
+      <Project>{c4ac9650-72a5-4470-a2d4-2d22c504bf0f}</Project>
+      <Name>PartnerPortal.CustomerAccess.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PartnerPortal.Invoice.Entities\PartnerPortal.Invoice.Entities.csproj">
       <Project>{50261e8c-7f79-437b-9eb2-8423d8eb7080}</Project>
       <Name>PartnerPortal.Invoice.Entities</Name>
