--- a/Xbooster/Code/Xbooster.Web/Web.config
+++ b/Xbooster/Code/Xbooster.Web/Web.config
@@ -22,16 +22,16 @@
       <exceptionLogger name="DefaultExceptionLogger" type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_Configuration;User ID=development;Password=dev!123;" />
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_Configuration;User ID=development;Password=dev!123;" />
     <add name="XBoosterDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=XBooster_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
     
     <add name="LogDBConnString" connectionString="Initial Catalog=XBooster_Dev_Logging;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=XBooster_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
     
-    <add name="CDRComparisonOutputDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_CDRComparisonOutput;User ID=development;Password=dev!123;" />
+    <add name="CDRComparisonOutputDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_CDRComparisonOutput;User ID=development;Password=dev!123;" />-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="Web_ExtendedModulesNames" value=""/>
     <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT"/>
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t"/>
