Update and refactor DataParser
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41182

--- a/Vanrise/Code/Vanrise.DataParser.Business/Vanrise.DataParser.Business.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Business/Vanrise.DataParser.Business.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HexTLV\HexTLVParserType.cs" />
+    <Compile Include="ParserHelper.cs" />
     <Compile Include="ParserTypeConfigsManager.cs" />
     <Compile Include="ParserTypeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
