--- a/Vanrise/Code/Vanrise.GenericData.Transformation.MainExtensions/Vanrise.GenericData.Transformation.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Transformation.MainExtensions/Vanrise.GenericData.Transformation.MainExtensions.csproj
@@ -50,6 +50,7 @@
     <Compile Include="MappingSteps\ExecuteTransformationStep.cs" />
     <Compile Include="MappingSteps\ForLoopStep.cs" />
     <Compile Include="MappingSteps\IfElseStep.cs" />
+    <Compile Include="MappingSteps\ExecuteExpressionStep.cs" />
     <Compile Include="MappingSteps\InitializeRecordStep.cs" />
     <Compile Include="MappingSteps\StopIterationStep.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
