refactor DataParser, Update IP4Parser, Sequence Parser
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41189

--- a/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
@@ -49,6 +49,7 @@
     <Compile Include="HexTLV\TagValueParsers\IPv4Parser.cs" />
     <Compile Include="HexTLV\TagValueParsers\SequenceParser.cs" />
     <Compile Include="HexTLV\TagValueParsers\StringParser.cs" />
+    <Compile Include="HexTLV\TagValueParsers\TBCDNumberParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
