HexTLV parser skeleton
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41190

--- a/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HexTLV2\HexTLVFieldParser.cs" />
+    <Compile Include="HexTLV2\HexTLVFieldParserCollection.cs" />
+    <Compile Include="HexTLV2\HexTLVRecordParser.cs" />
+    <Compile Include="HexTLV2\ParsedRecordFieldConstantValue.cs" />
     <Compile Include="HexTLV\HexTLVRecordReadersConfig.cs" />
     <Compile Include="HexTLV\HexTLVTagType.cs" />
     <Compile Include="HexTLV\HexTLVTagValueParserConfig.cs" />
