--- a/Vanrise/Code/Vanrise.DataParser.Business/Vanrise.DataParser.Business.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Business/Vanrise.DataParser.Business.csproj
@@ -57,6 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HexTLV2\HexTLVHelper.cs" />
+    <Compile Include="HexTLV2\HexTLVParserType.cs" />
     <Compile Include="HexTLV\HexTLVParserType.cs" />
     <Compile Include="ParserHelper.cs" />
     <Compile Include="ParserTypeConfigsManager.cs" />
