--- a/Mediation/Code/Mediation.Web/Web.config
+++ b/Mediation/Code/Mediation.Web/Web.config
@@ -63,6 +63,7 @@
     <add key="QueueingConfigDBConnStringKey"                    value="ConfigurationDBConnString"/>
     <add key="RulesDBConnStringKey"                             value="Mediation_GenericConfig_DBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="DataParserDBConnStringKey" value="ConfigurationDBConnString"/>
 
     <add key="Mediation_GenericRecord_DBConnStringKey"          value="Mediation_GenericRecord_DBConnString"/>
     <add key="Mediation_GenericConfig_DBConnStringKey"          value="Mediation_GenericRecord_DBConnString"/>
