Implementing GetRemoteAnalyticTablesInfo and GetRemoteMeasuresInfo
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41199

--- a/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Config\Measure\AnalyticMeasureConfig.cs" />
     <Compile Include="Config\Measure\IMeasureEvaluator.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfigQuery.cs" />
+    <Compile Include="Config\Measure\RemoteAnalyticMeasureConfigInfo.cs" />
     <Compile Include="DataAnalysis\Common\DARecordAggregate.cs" />
     <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\DAProfCalcOutputFieldFilter.cs" />
     <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\DAProfCalcOutputField.cs" />
