--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
@@ -45,6 +45,12 @@
     <Reference Include="Vanrise.AccountBalance.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Analytic.Business">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Analytic.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
@@ -67,7 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountStatementManager.cs" />
+    <Compile Include="AnalyticManager.cs" />
     <Compile Include="LiveBalanceManager.cs" />
+    <Compile Include="AnalyticDefinitionSettings.cs" />
     <Compile Include="LiveBalanceTileDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetailAccountUserManager.cs" />
