--- a/CarrierPortal/Code/PartnerPortal.Invoice.Business/PartnerPortal.Invoice.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Business/PartnerPortal.Invoice.Business.csproj
@@ -51,6 +51,9 @@
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.GenericData.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Invoice.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Entities.dll</HintPath>
     </Reference>
