Add structure for new concept   configSource="ConnectionStrings.config" and  file="appSettings.config"
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41217

--- a/CarrierPortal/Code/CarrierPortal.Web/Web.config
+++ b/CarrierPortal/Code/CarrierPortal.Web/Web.config
@@ -22,16 +22,16 @@
       <exceptionLogger name="DefaultExceptionLogger" type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CarrierPortal_Dev_Configuration;User ID=development;Password=dev!123;" />
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CarrierPortal_Dev_Configuration;User ID=development;Password=dev!123;" />
     <add name="PortalConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CarrierPortal_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
 
     <add name="LogDBConnString" connectionString="Initial Catalog=CarrierPortalLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=CarrierPortalTransactionDB;User ID=sa; Password=p@ssw0rd" />
     
-    <add name="MainDBConnString" connectionString=""/>
+    <add name="MainDBConnString" connectionString=""/>-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="Web_ExtendedModulesNames" value="CP_SupplierPricelist,VR_GenericData,Analytic,PartnerPortal_CustomerAccess,PartnerPortal_Invoice,CP_Ringo"/><!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
     <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
@@ -51,6 +51,7 @@
     <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    
     <add key="ExposedConnectionStringNames" value=""/>
   </appSettings>
   <system.web>
