--- a/CarrierPortal/Code/CarrierPortal.DevRuntime/App.config
+++ b/CarrierPortal/Code/CarrierPortal.DevRuntime/App.config
@@ -41,28 +41,29 @@
     </exceptionLoggers>
   </vanriseLogging>
 
-  <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CarrierPortal_Dev_Configuration;User ID=development;Password=dev!123;" />
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CarrierPortal_Dev_Configuration;User ID=development;Password=dev!123;" />
     <add name="PortalConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CarrierPortal_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
     
     <add name="TransactionDBConnString" connectionString="Initial Catalog=CarrierPortalTransactionDB;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     <add name="LogDBConnString" connectionString="Initial Catalog=CarrierPortalLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     
-    <add name="MainDBConnString" connectionString=""/>
+    <add name="MainDBConnString" connectionString=""/>-->
   </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="CP_DBConnStringKey" value="PortalConnectionString" />
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
+  <appSettings file="appSettings.config">
     <add key="IsRuntimeService" value="false"/>
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+
+    <add key="CP_DBConnStringKey"                               value="PortalConnectionString"/>
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    
+    <add key="ExposedConnectionStringNames" value=""/>    
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
